Bug 282108 - Dolphin crashed when opening Places (Documents) folder
Summary: Dolphin crashed when opening Places (Documents) folder
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.99
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 288781 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-09-15 22:14 UTC by Hrvoje Senjan
Modified: 2011-12-12 12:19 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (6.50 KB, text/plain)
2011-09-16 09:45 UTC, Hrvoje Senjan
Details
New crash information added by DrKonqi (7.53 KB, text/plain)
2011-12-12 12:12 UTC, klangga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hrvoje Senjan 2011-09-15 22:14:08 UTC
Application: dolphin (1.99)
KDE Platform Version: 4.7.1 (4.7.1)
Qt Version: 4.7.4
Operating System: Linux 3.0.0-4.dmz.2-liquorix-amd64 x86_64
Distribution: Ubuntu oneiric (development branch)

-- Information about the crash:
- What I was doing when the application crashed:

Dolphin crashed when opening Places (Documents) folder; compiled kde-baseaoos against 4.7.1

-- Backtrace:
Application: Dolphin (dolphin), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fd1ae2a6780 (LWP 1720))]

Thread 3 (Thread 0x7fd19b27b700 (LWP 1721)):
#0  0xffffffffff600177 in ?? ()
#1  0x00007fff529ff7e7 in ?? ()
#2  0x00007fd1a4ace07b in __GI_clock_gettime (clock_id=1, tp=0x7fd19b27ab40) at ../sysdeps/unix/clock_gettime.c:100
#3  0x00007fd1a9ee1074 in do_gettime (frac=0x7fd19b27ab58, sec=0x7fd19b27ab50) at tools/qelapsedtimer_unix.cpp:123
#4  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#5  0x00007fd1a9fa36ed in QTimerInfoList::updateCurrentTime (this=0x8fa920) at kernel/qeventdispatcher_unix.cpp:339
#6  0x00007fd1a9fa3a33 in QTimerInfoList::timerWait (this=0x8fa920, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#7  0x00007fd1a9fa244c in timerSourcePrepareHelper (src=<optimized out>, timeout=0x7fd19b27ac3c) at kernel/qeventdispatcher_glib.cpp:136
#8  0x00007fd1a9fa24f5 in timerSourcePrepare (source=<optimized out>, timeout=<optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#9  0x00007fd1a6289102 in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#10 0x00007fd1a6289f0d in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#11 0x00007fd1a628a539 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#12 0x00007fd1a9fa2f3e in QEventDispatcherGlib::processEvents (this=0x8f7d10, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#13 0x00007fd1a9f76cf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#14 0x00007fd1a9f76ef7 in QEventLoop::exec (this=0x7fd19b27add0, flags=...) at kernel/qeventloop.cpp:201
#15 0x00007fd1a9e8e27f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#16 0x00007fd1a9f59cbf in QInotifyFileSystemWatcherEngine::run (this=0x8be600) at io/qfilesystemwatcher_inotify.cpp:248
#17 0x00007fd1a9e90d05 in QThreadPrivate::start (arg=0x8be600) at thread/qthread_unix.cpp:331
#18 0x00007fd1a675bedc in start_thread (arg=0x7fd19b27b700) at pthread_create.c:304
#19 0x00007fd1adb8589d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#20 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7fd19882d700 (LWP 1722)):
#0  0x00007fd1adb79773 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007fd1a628a078 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fd1a628a539 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fd1a9fa2f3e in QEventDispatcherGlib::processEvents (this=0x99e9a0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007fd1a9f76cf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007fd1a9f76ef7 in QEventLoop::exec (this=0x7fd19882cdd0, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007fd1a9e8e27f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#7  0x00007fd1a9f59cbf in QInotifyFileSystemWatcherEngine::run (this=0x9930a0) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007fd1a9e90d05 in QThreadPrivate::start (arg=0x9930a0) at thread/qthread_unix.cpp:331
#9  0x00007fd1a675bedc in start_thread (arg=0x7fd19882d700) at pthread_create.c:304
#10 0x00007fd1adb8589d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fd1ae2a6780 (LWP 1720)):
[KCrash Handler]
#6  QUrl::QUrl (this=0x7fff529f3b70, other=...) at io/qurl.cpp:4174
#7  0x00007fd1aa3cfa19 in KUrl::KUrl (this=0x7fff529f3b70, _u=<optimized out>) at ../../kdecore/io/kurl.cpp:490
#8  0x00007fd1abbe48d0 in KFileItem::url (this=<optimized out>) at ../../kio/kio/kfileitem.cpp:1327
#9  0x00007fd1acf0d61c in VersionControlObserver::verifyDirectory() () from /usr/lib/libdolphinprivate.so.4
#10 0x00007fd1acf0d7dc in VersionControlObserver::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libdolphinprivate.so.4
#11 0x00007fd1a9f8aeba in QMetaObject::activate (sender=0x7a2f30, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3278
#12 0x00007fd1a9f8e789 in QObject::event (this=0x7a2f30, e=<optimized out>) at kernel/qobject.cpp:1181
#13 0x00007fd1aa9783d4 in notify_helper (e=0x7fff529f4170, receiver=0x7a2f30, this=0x717350) at kernel/qapplication.cpp:4486
#14 QApplicationPrivate::notify_helper (this=0x717350, receiver=0x7a2f30, e=0x7fff529f4170) at kernel/qapplication.cpp:4458
#15 0x00007fd1aa97d241 in QApplication::notify (this=0x7fff529f4470, receiver=0x7a2f30, e=0x7fff529f4170) at kernel/qapplication.cpp:4365
#16 0x00007fd1ab68c266 in KApplication::notify (this=0x7fff529f4470, receiver=0x7a2f30, event=0x7fff529f4170) at ../../kdeui/kernel/kapplication.cpp:311
#17 0x00007fd1a9f77afc in QCoreApplication::notifyInternal (this=0x7fff529f4470, receiver=0x7a2f30, event=0x7fff529f4170) at kernel/qcoreapplication.cpp:787
#18 0x00007fd1a9fa4d62 in sendEvent (event=0x7fff529f4170, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#19 QTimerInfoList::activateTimers (this=0x70eba0) at kernel/qeventdispatcher_unix.cpp:603
#20 0x00007fd1a9fa2514 in timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:184
#21 0x00007fd1a6289b6d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#22 0x00007fd1a628a368 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#23 0x00007fd1a628a539 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#24 0x00007fd1a9fa2ed6 in QEventDispatcherGlib::processEvents (this=0x6efa00, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#25 0x00007fd1aaa1fc6e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#26 0x00007fd1a9f76cf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#27 0x00007fd1a9f76ef7 in QEventLoop::exec (this=0x7fff529f4400, flags=...) at kernel/qeventloop.cpp:201
#28 0x00007fd1a9f7b789 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#29 0x00007fd1ade8c159 in kdemain () from /usr/lib/kde4/libkdeinit/libkdeinit4_dolphin.so
#30 0x00007fd1adac530d in __libc_start_main (main=0x400640, argc=6, ubp_av=0x7fff529f4958, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fff529f4948) at libc-start.c:226
#31 0x0000000000400671 in _start ()

Possible duplicates by query: bug 256611.

Reported using DrKonqi
Comment 1 Hrvoje Senjan 2011-09-16 09:45:56 UTC
Created attachment 63689 [details]
New crash information added by DrKonqi

dolphin (1.99) on KDE Platform 4.7.1 (4.7.1) using Qt 4.7.4

- What I was doing when the application crashed:

Again it crashed when trying to open /usr directory.

-- Backtrace (Reduced):
#6  QUrl::QUrl (this=0x7fffcd303de0, other=...) at io/qurl.cpp:4174
#7  0x00007f00b5237a19 in KUrl::KUrl (this=0x7fffcd303de0, _u=<optimized out>) at ../../kdecore/io/kurl.cpp:490
#8  0x00007f00b6a4c8d0 in KFileItem::url (this=<optimized out>) at ../../kio/kio/kfileitem.cpp:1327
#9  0x00007f00b7d7561c in VersionControlObserver::verifyDirectory() () from /usr/lib/libdolphinprivate.so.4
#10 0x00007f00b7d757dc in VersionControlObserver::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libdolphinprivate.so.4
Comment 2 Peter Penz 2011-09-18 13:07:43 UTC
Git commit b0a5c2993255e62a7fb20fe89f6bd0687dddc3fa by Peter Penz.
Committed on 18/09/2011 at 15:06.
Pushed by ppenz into branch 'master'.

Fix crash in version-control-observer

The returned file-item of the root might be null.

BUG: 282108

M  +3    -3    dolphin/src/views/versioncontrol/versioncontrolobserver.cpp

http://commits.kde.org/kde-baseapps/b0a5c2993255e62a7fb20fe89f6bd0687dddc3fa
Comment 3 Hrvoje Senjan 2011-09-18 13:14:54 UTC
Thanks! This one was really annoying ;)
Comment 4 Thijs 2011-12-12 11:46:31 UTC
*** Bug 288781 has been marked as a duplicate of this bug. ***
Comment 5 Thijs 2011-12-12 11:48:07 UTC
Not sure it is completely gone... Pretty much identical bug report in 4.8b2
Comment 6 klangga 2011-12-12 12:12:04 UTC
Created attachment 66656 [details]
New crash information added by DrKonqi

dolphin (1.99) on KDE Platform 4.7.90 (4.8 Beta2 (4.7.90) using Qt 4.7.4

Another crash again, same description as before.

-- Backtrace (Reduced):
#6  QUrl::QUrl (this=<optimized out>, other=<optimized out>) at qurl.cpp:4174
#7  0x00007fa4886b8729 in KUrl::KUrl (this=0x7fff841dcc50, _u=<optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.7.90/work/kdelibs-4.7.90/kdecore/io/kurl.cpp:490
#8  0x00007fa4820d7a28 in KFileItem::url (this=<optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.7.90/work/kdelibs-4.7.90/kio/kio/kfileitem.cpp:1368
#9  0x00007fa4749061ae in DolphinView::saveState (this=) at dolphinview.cpp:953
#10 0x00007fa4750a27db in DolphinViewContainer::saveViewState (this=<optimized out>) at dolphinviewcontainer.cpp:605
Comment 7 Peter Penz 2011-12-12 12:19:00 UTC
@klangga: Thanks for the udpate. The issue you reported had a different root-cause and has been fixed after Beta2.