Fix crash in version-control-observer

The returned file-item of the root might be null.

BUG: 282108